Closed Bug 918526 Opened 11 years ago Closed 11 years ago

Fix an exact rooting hazard in jit/IonCache.cpp

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

The Shape* here is live across the GC in getType; we already have a root for the shape in the caller, so I've just used that.
Attachment #807455 - Flags: review?(nicolas.b.pierron)
Attachment #807455 - Flags: review?(nicolas.b.pierron) → review+
https://hg.mozilla.org/mozilla-central/rev/00ee597a7cdc
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Assignee: general → terrence
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: