Bug 918526 - Fix an exact rooting hazard in IonCache; r=nbp

--HG--
extra : rebase_source : 81d77f16af0cabaeaefab586d985a8778c4c5fd3